# ralph

./: AGENTS.md  CLAUDE.md  README.md  prompt.md  ralph.sh
examples/audio-chaptering/: .auqrc.json  .mcp.json  CLAUDE.md  PLAN.md  README.md  build.sh  plan.sh  prd.json  progress.txt  pyproject.toml
examples/audio-chaptering/audiochap/: cli.py  format.py  generate.py  upload.py
